stable state of todo backend app

--- a/docker/dev/Dockerfile
+++ b/docker/dev/Dockerfile
@@ -12,6 +12,8 @@ ENV WHEELHOUSE=/wheelhouse PIP_WHEEL_DIR=/wheelhouse PIP_FIND_LINKS=/wheelhouse 
 
 VOLUME /wheelhouse
 
+VOLUME /build
+
 VOLUME /reports
 
 COPY scripts/test.sh /usr/local/bin/test.sh
