--- a/docker/dev/docker-compose.yml
+++ b/docker/dev/docker-compose.yml
@@ -12,6 +12,17 @@ test:
     MYSQL_PASSWORD: password
     TEST_OUTPUT_DIR: /reports
 
+
+builder:
+  build: ../../
+  dockerfile: docker/dev/Dockerfile
+  volumes: 
+    - ../../target:/wheelhouse
+  volumes_from:
+    - cache
+  entrypoint: "entrypoint.sh" 
+  command: ["pip", "wheel", "--no-index", "-f /build", "."] 
+  
 agent:
   image: odania/ansible
   volumes:
@@ -35,4 +46,5 @@ cache:
   dockerfile: docker/dev/Dockerfile
   volumes:
     - /tmp/cache:/cache
-  entrypoint: "true"  
+    - /build
+  entrypoint: "true"
